Wed Jun 13 12:40:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * orbsvcs/orbsvcs/SSLIOP.mpc:
        * orbsvcs/orbsvcs/SSLIOP/params_dup.c:
        * orbsvcs/orbsvcs/SSLIOP/params_dup.cpp:

          Annoying conflict of interest, having to revert the
          params_dup.c change/rename and put in another params_dup.cpp
          (that simply extern "C" block #includes paramer_dup.c)
          making which file is build conditional within the controlling
          mpc file.

Tue Jun 12 15:52:09 UTC 2007  Ciju John  <johnc at ociweb dot com>

        * orbsvcs/tests/Event/Mcast/AddrServer/Client.cpp:
          IPV6 dependent code enclosed within 'ACE_HAS_IPV6'

        * orbsvcs/tests/Event/Mcast/RTEC_MCast_Federated/EchoEventConsumer_i.cpp:
          Fix for platforms which don't support 'getpid' API.

Fri Jun  8 19:23:45 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tao/Generic_Sequence_T.h:

          A default-constructed unbounded sequence has no buffer allocated, so
          "release" should be false.  This restores the behavior of sequences
          before the recent re-write.

        * tests/Sequence_Unit_Tests/bounded_string_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/bounded_value_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/string_sequence_tester.hpp:
        * tests/Sequence_Unit_Tests/unbounded_fwd_object_reference_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_object_reference_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_octet_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_string_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_value_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/value_sequence_tester.hpp:

          Updated unit tests to take this into account.

Fri Jun 08 10:20:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * TAO/orbsvcs/orbsvcs/SSLIOP/params_dup.c:

          Due to Window's MFC compatiable builds objecting to this